# src/awsServices/google.dto.ts
@@ -1,0 +1,7 @@
+export interface AwsUploadBody {
+  bufferImage: string;
+}
+
+export interface AwsMultipleUploadBody {
+  bufferImages: string[];
+}
